# ModelZoo

./: .gitignore  README.md  build_config.py  pyproject.toml  run_model.py  utils.py
ImageClassification/: build_config.py  run_model.py  train.py  utils.py
ImageClassification/_configs/: alexnet.json  inceptionv1.json  mobilenet_v1.json  resnet18.json  vgg16.json
ImageClassification/datasets/: __init__.py  base_dataset.py
ImageClassification/datasets/datasets/: cifar10.py  utils.py
ImageClassification/datasets/datasets/bone_fracture_xray/: dataset.py  labels.py
ImageClassification/datasets/datasets/cifar10/: cifar10.py  labels.py
ImageClassification/models/: __init__.py  base_models.py
ImageClassification/models/AlexNet/: run_model.ipynb
ImageClassification/models/HandwrittenDigitRecognitionWithBackPropNetwork/: run_model.py
ImageClassification/train/: base_train.py  inference.py
ImageClassification/train/src/: classification.py
_configs/: mobilenet_v2.json  vgg16.json
models/AlexNet/src/: model.py
models/GoogLeNet/src/: model.py
models/HandwrittenDigitRecognitionWithBackPropNetwork/logs/: events.out.tfevents.1743868672.GeraPc.9862.0  events.out.tfevents.1743869625.GeraPc.13806.0  events.out.tfevents.1743871784.GeraPc.32196.0
models/MobileNet/v1/src/: model.py
modelzoo/: build_config.py  cli.py  install_completion.py  main.py
modelzoo/dataset_loaders/: __init__.py
modelzoo/models/: __init__.py
modelzoo/train/src/: classification.py
tests/: test_registers.py
train/: __init__.py  base_train.py
train/src/: classification.py
(+19 files in other folders)
