[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelzoo"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "click >= 8.0",
    "pytest >= 8.3",
]

[project.scripts]
modelzoo = "modelzoo.cli:main"


[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true
zip-safe = false